[project]
name = "practical03"
version = "0.1.0"
description = "Practical guide to dockerize a flask application"
license =  "CC-BY-NC-SA-4.0"
authors = [
    {name = "Nimesh Garg",email = "nimesh@somemail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
